# nmf-pipeline-rs

./: README.md  python_bootsrapping.py
rust/: Cargo.toml
rust/src/: main.rs  modeling.rs  preprocessing.rs
